# wordle-rust

./: .replit  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: guess.rs  main.rs  words.json  words.rs
src/words/: answer_words.rs  guess_words.rs
