[package]
name = "wordle-rust"
version = "0.1.0"
authors = ["notken12"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.59"
serde = { version = "1.0.117", features = ["derive"] }
rand = "0.8.5"
colored = "2"
ansi_term = "0.12"