[package]
name = "wordle-rust"
version = "0.1.0"
authors = ["notken12"]
edition = "2018"
description = "Play Wordle in the command line"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ansi_term = "0.12.1"
enable-ansi-support = "0.1.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
